--- a/code_black/requirements.txt
+++ b/code_black/requirements.txt
@@ -21,6 +21,7 @@ spacy==2.3.2
 sqlparse==0.3.1
 srsly==1.0.2
 thinc==7.4.1
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.6.0+cpu
 torchtext==0.3.1
 torchvision==0.7.0+cpu
