--- a/code_black/requirements.txt
+++ b/code_black/requirements.txt
@@ -1,30 +1,44 @@
+amqp==2.6.1
+anyjson==0.3.3
 asgiref==3.2.10
+billiard==3.6.3.0
 blis==0.4.1
 catalogue==1.0.0
+celery==4.3.0
 certifi==2020.6.20
 chardet==3.0.4
+cycler==0.10.0
 cymem==2.0.3
 Django==3.0.8
 en==0.0.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 future==0.18.2
 idna==2.10
+kiwisolver==1.2.0
+kombu==4.6.11
+matplotlib==3.3.0
 murmurhash==1.0.2
 numpy==1.19.1
+pandas==1.1.0
 Pillow==7.2.0
 plac==1.1.3
 preshed==3.0.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2020.1
+redis==3.5.3
 requests==2.24.0
+scipy==1.5.2
+seaborn==0.10.1
 six==1.15.0
 spacy==2.3.2
 sqlparse==0.3.1
 srsly==1.0.2
 thinc==7.4.1
---find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.6.0+cpu
 torchtext==0.3.1
 torchvision==0.7.0+cpu
 tqdm==4.48.0
 urllib3==1.25.10
+vine==1.3.0
 wasabi==0.7.1
