--- a/code_black/requirements.txt
+++ b/code_black/requirements.txt
@@ -23,6 +23,7 @@ pandas==1.1.0
 Pillow==7.2.0
 plac==1.1.3
 preshed==3.0.2
+psycopg2==2.8.5
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
@@ -35,7 +36,6 @@ spacy==2.3.2
 sqlparse==0.3.1
 srsly==1.0.2
 thinc==7.4.1
---find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.6.0+cpu
 torchtext==0.3.1
 torchvision==0.7.0+cpu
